-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u231, jfx15
-
Component/s: javafx
-
x86
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8247258 | jfx11.0.8 | Arun Joseph | P3 | Resolved | Fixed | |
| JDK-8242528 | 8u261 | Arun Joseph | P3 | Resolved | Fixed | b03 |
CLoop interpreter used in 32-bit Windows uses 87 KB of stack space each time CLoop::execute() is called. For web native threads which has a default stack size of 320 KB, a Stack Overflow Error is raised just after two calls to execute() function. While 64-bit windows has a default stack size of 1 MB.
Fix: Increase the thread stack size of web native threads for x86 to 1 MB.
Fix: Increase the thread stack size of web native threads for x86 to 1 MB.
- backported by
-
JDK-8242528 Increase web native thread stack size for x86 mode
-
- Resolved
-
-
JDK-8247258 Increase web native thread stack size for x86 mode
-
- Resolved
-