8242209: Increase web native thread stack size for x86 mode